--- a/client/src/app/_modules/members/components/member-list/member-list.component.html
+++ b/client/src/app/_modules/members/components/member-list/member-list.component.html
@@ -62,7 +62,7 @@
 
 
 <div class="row">
-    <div class="col-2" *ngFor="let member of members">
+    <div class="col-2" *ngFor="let member of (members$ | async)?.members">
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
